# FPGFX

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  CMakeLists.txt  Definitions.h  Format.cpp  Format.h  Log.cpp  Log.h  MathTypes.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Threading.cpp  Threading.h  Transform.cpp  Transform.h  Types.h  UI.cpp  UI.h  main.cpp
src/ECS/: CMakeLists.txt  CommonComponents.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
